--- a/stylesheets/cv.css
+++ b/stylesheets/cv.css
@@ -25,6 +25,10 @@ a {
     padding-top: 20px;
 }
 
+.orange {
+    color: orange;
+}
+
 /* CV */
 
 .cv-main {
@@ -50,10 +54,10 @@ a {
 }
 
 .cv-item {
-    color: rgb(0, 0, 0);
     margin: 0;
     margin-bottom: 5px;
     border-bottom: 2px dashed #ccc;
+    cursor: pointer;
 }
 
 .expanded {
