--- a/stylesheets/gallery.css
+++ b/stylesheets/gallery.css
@@ -79,10 +79,10 @@ body, .logo {
     width: 100%;
     height: 100%;
     background: rgba(0, 0, 0, 0.9);
-    opacity: 0;
-    -webkit-transition: opacity .5s ease-in-out;
-    transition: opacity .5s ease-in-out;
-    display: none;
+    /*opacity: 0;*/
+    /*-webkit-transition: opacity .5s ease-in-out;
+    transition: opacity .5s ease-in-out;*/
+    display: flex;
     -webkit-box-pack: justify;
         -ms-flex-pack: justify;
             justify-content: space-between;
