--- a/hangman/style.css
+++ b/hangman/style.css
@@ -1,6 +1,6 @@
 #wordbox {
     display: flex;
-    font-size: 3em;
+    font-size: 1.6rem;
     text-align: center;
 }
 
@@ -12,4 +12,9 @@
 
 #resetButton {
     display: none;
+}
+
+#hangman img {
+    width: 60%;
+    height: 60%;
 }
