--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -271,13 +271,14 @@ a {
 /* Hangman game */
 iframe {
     position: fixed;
-    top: 0;
-    margin-top: 88px;
-    width: 190vh;
-    height: 100vh;
+    top: 50%;
+    left: 50%;
+    width: 80vh;
+    height: 50vh;
     background: #fff;
-    border: none;
+    border: 2px solid #ccc;
     display: none;
+    transform: translate(-50%, -50%)
 }
 
 /* Responsiveness */
