--- a/stylesheets/home.css
+++ b/stylesheets/home.css
@@ -99,7 +99,6 @@
 
 .about {
     width: 100%;
-    height: 470px;
     margin: 0;
     padding: 5px;
     background: #fff;
@@ -163,6 +162,7 @@
     box-sizing: border-box;
     padding-left: 10px;
     padding-right: 10px;
+    margin-top: 50px;
 }
 
 .contact-header {
@@ -245,13 +245,13 @@
     .arrow {display: block; width: 25%; background-size: 100%;}
     .mobile-background {background-image: none;}
     .pattern {height: 500px;}
-    .mailform {width: 402px;}
+    .mailform {width: 402px; margin-top: 300px;}
 }
 
 @media only screen and (min-width: 920px) {
-    .about {width: 400px; margin: 150px 7% 0 0;}
+    .about {width: 400px; height: 470px; margin: 150px 7% 0 0;}
     .whitespace {display: block;}
-    .mailform {margin-left: 20px;}
+    .mailform {margin-left: 20px; margin-top: auto;}
     .pattern div {margin-top: 80px; margin-bottom: 0;}
 }
 
